--- a/templates/land.html
+++ b/templates/land.html
@@ -206,7 +206,7 @@
   </main>
 
   <div class="tree-container">
-    <img src="{{ url_for('static', filename='static/tree.png') }}" alt="Tree" width="300">
+    <img src="/static/tree.png" alt="Tree">
     <div class="emoji-leaf" style="top: 9.5%; left: 43%;">😊</div>
     <div class="emoji-leaf" style="top: 14%; left: 62%;">😲</div>
     <div class="emoji-leaf" style="top: 18%; left: 46%;">🥺</div>
