--- a/templates/mood_details.html
+++ b/templates/mood_details.html
@@ -16,7 +16,7 @@
   <div class="background-animation-container"></div>
 
   <div class="container">
-    <a href="/" class="back-button">← Back to Mood Detection</a>
+    <a href="/dashboard.html" class="back-button">← Back to Mood Detection</a>
     
     <h1 class="details-page-heading">
       Your Mood: 
